# rappi-argentina

./: .dockerignore  .env.example  .gitignore  .mcp.json  API_ENDPOINTS.md  CLAUDE.md  CONTRIBUTING.md  DESARROLLO.md  Dockerfile  GUIA-ARGENTINA.md  LICENSE  README.md  TESTING.md  install-openclaw.sh  main.py  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: rappi-agent.md
docs/: openclaw-setup.md
skills/order-food/: SKILL.md
skills/rappi-reorder/: SKILL.md
skills/rappi-search/: SKILL.md
skills/rappi-suggest/: SKILL.md
src/rappi/: client.py  config.py  constants.py
src/rappi/cli/: __init__.py  address.py  auth.py  build_plugin.py  cart.py  favorites.py  formatters.py  history.py  interactive.py  order.py  prefs.py  search.py  session.py  store.py
src/rappi/mcp/: server.py
src/rappi/memory/: __init__.py  db.py  embeddings.py  intelligence.py  manager.py
src/rappi/models/: account.py  address.py  cart.py  dynamic.py  home.py  intelligence.py  order.py  store.py  user.py
src/rappi/services/: account.py  address.py  auth.py  browser_auth.py  cart.py  checkout.py  dynamic.py  home.py  order.py  search.py  store.py
tests/: conftest.py  test_client.py  test_config.py  test_constants.py  test_intelligence.py  test_memory_db.py  test_memory_manager.py  test_memory_repos.py  test_models.py  test_services_address.py  test_services_auth.py  test_services_cart.py  test_services_checkout.py  test_services_order.py  test_services_search.py  test_services_store.py  test_utils.py
(+7 files in other folders)
