[project]
name = "rappi-cli"
version = "0.1.0"
description = "Rappi food delivery CLI and MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=2.5",
    "mcp>=1.20",
    "playwright>=1.58.0",
    "aiosqlite>=0.22.1",
]

[project.scripts]
rappi = "rappi.cli:main"
rappi-mcp = "rappi.mcp.server:main"

[project.optional-dependencies]
embeddings = ["openai>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rappi"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
